--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/top-categories.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/top-categories.phtml
@@ -1,20 +1,23 @@
-<div class="menu-grid">
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-    </div>
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-    </div>
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-    </div>
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-    </div>
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-    </div>
-    <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
+<div class="menu">
+    <h2>Danh mục hàng đầu trong tháng</h2>
+    <div class="menu-grid">
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/Thi_t_b_nghe_nh_n_copy_1_.png'); ?>" alt="Banner Image">
+        </div>
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/Thi_t_b_nh_b_p_copy_1_.png'); ?>" alt="Banner Image">
+        </div>
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/Thi_t_b_gia_d_ng_copy_1_.png'); ?>" alt="Banner Image">
+        </div>
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/Ph_ki_n_sharp_ch_nh_h_ng.png'); ?>" alt="Banner Image">
+        </div>
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/M_ph_m.png'); ?>" alt="Banner Image">
+        </div>
+        <div class="menu-item">
+            <img src="<?php echo $block->getViewFileUrl('images/Th_c_ph_m_ch_c_n_ng.png'); ?>" alt="Banner Image">
+        </div>
     </div>
 </div>
