--- a/app/design/frontend/Practice/ecomm/web/css/source/_new.less
+++ b/app/design/frontend/Practice/ecomm/web/css/source/_new.less
@@ -9,13 +9,25 @@ body {
 }
 
 
-.menu-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    background-color: #fff;
-}
+    .menu-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+        background-color: #fff;
 
+        .menu-item {
+            img {
+                border-radius: 10px;
+                width: 100%;
+                border: 1px solid #b8b8b8;
+            }
+        }
+    }
+.menu {
+    h2 {
+        font-weight: 700;
+    }
+}
 .banner-wrapper{
     display: flex;
     padding-bottom: 30px;
@@ -24,12 +36,23 @@ body {
         margin-right: 25px;
         width: 70%;
 
+        img {
+            border-radius: 10px;
+            border: 1px solid #b8b8b8;
+
+        }
     }
     .banner-right {
         width: 30%;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
+
+        img {
+            border-radius: 10px;
+            border: 1px solid #b8b8b8;
+
+        }
     }
 }
 
@@ -127,7 +150,6 @@ right: 25px;
 .header-banner .banner-block img {
     max-width: 1280px;
     width: 100%;
-    height: 80px;
 }
 
 .header-inner-container {
@@ -160,7 +182,7 @@ right: 25px;
         display: flex;
         justify-content: flex-end;  
 
-        ul {
+        div {
             list-style: none;
         }
     }
