--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/best_price_slider_product.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/best_price_slider_product.phtml
@@ -8,7 +8,7 @@ $randomProductIds = [1, 2, 3, 4, 5, 6, 7, 8];
 ?>
 <div class="product">
 <div class="product-title">
-    <h2>Giá Tốt Trong Ngày</h2>
+    <h2><?= __('Giá Tốt Trong Ngày') ?></h2>
 </div>
 <div class="product-container">
     <?php
